Added hay crop, hay seeds, hay. Localized names for all of them, and foundation for future crops(?)

--- a/src/main/resources/assets/firstmod/lang/en_us.lang
+++ b/src/main/resources/assets/firstmod/lang/en_us.lang
@@ -1,5 +1,6 @@
 #Items
 item.ingot_eperine.name=Eperine Ingot
-
+item.hay_seed.name=Hay Seeds
+item.hay.name=Hay
 # Blocks
 tile.ore_eperine.name=Eperine Ore
