added eperine fibers

--- a/src/main/resources/assets/firstmod/lang/en_us.lang
+++ b/src/main/resources/assets/firstmod/lang/en_us.lang
@@ -1,9 +1,15 @@
 #Creative Tab
+
 itemGroup.firstmod=Decor Mod
+
 #Items
+
 item.ingot_eperine.name=Eperine Ingot
 item.hay_seed.name=Hay Seeds
 item.hay.name=Hay
+item.fibers_eperine.name=Eperine Fibers
+
 # Blocks
+
 tile.ore_eperine.name=Eperine Ore
 tile.block_thatch.name=Thatch
